--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,22 @@
 #game-board {
-  display: grid;
-  grid-template-columns: repeat(10, 50px);
-  grid-template-rows: repeat(5, 50px);
+	display: grid;
+	grid-template-columns: repeat(10, 50px);
+	grid-template-rows: repeat(5, 50px);
 }
 
 #game-board div {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
+	width: 40px;
+	height: 40px;
+	border: 1px solid #ccc;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.player {
-  background-color: red;
+.player1 {
+	background-color: red;
+}
+
+.player2 {
+	background-color: blue;
 }
